# NDKLame

./: README.md
NdkLame/: build.gradle
NdkLame/app/: build.gradle
NdkLame/app/src/main/: AndroidManifest.xml
NdkLame/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NdkLame/app/src/main/cpp/lamemp3/: id3tag.c  lame.c
NdkLame/app/src/main/java/com/mysample/ndklame/: ByteConvertUtil.java  ChangeBuffer.java  ChangeByteBuffer.java  ChangeShortBuffer.java  ComPermission.kt  MainActivity.java  Mp3Encoder.java
NdkLame/app/src/main/res/layout/: activity_main.xml
